--- a/profiles7/pom.xml
+++ b/profiles7/pom.xml
@@ -8,12 +8,12 @@
 		<version>2.2.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.agujaREL</groupId>
-	<artifactId>mvc-jpa-relaciones</artifactId>
+	<groupId>com.agujaProfiles</groupId>
+	<artifactId>profiles7</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>mvc-jpa-relaciones</name>
-	<description>Spring Boot -06- JPA Relaciones de uno a uno y de muchos a muchos
+	<name>profiles7</name>
+	<description>Spring Boot Profiles -08- Configuracion de properties con perfiles
 </description>
 
 	<properties>
@@ -21,10 +21,6 @@
 	</properties>
 
 	<dependencies>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -39,11 +35,6 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
